--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,22 @@
 .idea/
 venv/
 deps/
+
 secrets.yaml
 home-assistant.log
 .HA_VERSION
+
 __pycache__/
+
+.google*
+.google*.cookies
+google_calendars.yaml
+
+.spotify*
+*.conf
+
+.automatic/
+icloud/
+
+ldap-auth.cfg
+known_devices.yaml
