--- a/configuration.yaml
+++ b/configuration.yaml
@@ -4,20 +4,26 @@ homeassistant:
   elevation: !secret home_elevation
   unit_system: imperial
   time_zone: !secret home_timezone
-  name: Communication
+  name: AI
   auth_providers:
     - type: trusted_networks
       trusted_networks:
-        - 172.19.0.0/16
+        - 172.20.0.0/16
         - 10.0.12.0/24
         - 10.0.11.174/32
       allow_bypass_login: true
     - type: homeassistant
 
+view_event: !include view_event.yaml
+
 http:
-  base_url: https://automation.prettybaked.com
-  server_port: !secret ai_server_public_port
+  base_url: https://ai.automation.home.prettybaked.com
 
 frontend:
 
 config:
+
+device_tracker: !include_dir_list image_processing
+
+mqtt: !include mqtt.yaml
+mqtteventstream: !include eventstream.yaml
