--- a/mqtt.yaml
+++ b/mqtt.yaml
@@ -8,7 +8,9 @@ birth_message:
   payload: >
     {
       "event_type": "instance_state.connected",
-      "event_data": "ai"
+      "event_data": {
+        "instance_name": "ai"
+      }
     }
 will_message:
   topic: events/slavrd/ai/instance_state
@@ -17,5 +19,7 @@ will_message:
   payload: >
     {
       "event_type": "instance_state.disconnected",
-      "event_data": "ai"
+      "event_data": {
+        "instance_name": "ai"
+      }
     }
